@@ -1,11 +1,11 @@
-package com.ranger.governance.hive;
+package com.youcash.governance.hive;
 
-import com.ranger.governance.common.model.ActionType;
-import com.ranger.governance.common.model.DecisionData;
-import com.ranger.governance.common.model.DecisionRequest;
-import com.ranger.governance.common.model.DecisionResponse;
-import com.ranger.governance.common.model.EngineType;
-import com.ranger.governance.common.protocol.GovernanceClient;
+import com.youcash.governance.common.model.ActionType;
+import com.youcash.governance.common.model.DecisionData;
+import com.youcash.governance.common.model.DecisionRequest;
+import com.youcash.governance.common.model.DecisionResponse;
+import com.youcash.governance.common.model.EngineType;
+import com.youcash.governance.common.protocol.GovernanceClient;
 import org.apache.hadoop.hive.conf.HiveConf;
 import org.apache.hadoop.hive.metastore.HiveMetaStoreClientFactory;
 import org.apache.hadoop.hive.ql.metadata.HiveAuthenticationProvider;
@@ -23,7 +23,12 @@ import org.slf4j.LoggerFactory;
 
 import java.util.List;
 
-
+/**
+ * Ranger proxy authorizer for phased governance rollout.
+ *
+ * <p>Key point: this class extends {@link RangerHiveAuthorizer} so CHECK can inherit
+ * native Ranger behavior via super.checkPrivileges(...).</p>
+ */
 public class PhasedRangerAuthorizer extends RangerHiveAuthorizer {
     private static final Logger LOG = LoggerFactory.getLogger(PhasedRangerAuthorizer.class);
 
@@ -59,37 +64,39 @@ public class PhasedRangerAuthorizer extends RangerHiveAuthorizer {
             LOG.error("Governance platform error, fail-open BYPASS", ex);
             return;
         }
-        if (response == null || !response.success() || response.getData() == null || response.getData().getActionType() == null) {
+
+        if (response == null || !response.success() || response.data() == null || response.data().actionType() == null) {
             LOG.warn("Governance response invalid/non-200, fail-open BYPASS. response={}", response);
             return;
         }
 
-        DecisionData data = response.getData();
-        ActionType actionType = data.getActionType();
-        if (actionType == ActionType.BLOCK) {
-            throw new HiveAccessControlException(nonEmpty(data.getMsg(), "任务被拦截：请补充 JobName 或按规范整改。"));
-        }
-        if (actionType == ActionType.BYPASS) {
-            return;
-        }
-        if (actionType == ActionType.WARN) {
-            LOG.warn("WARN action for queryId={}, msg={}", request.getQueryId(), data.getMsg());
-            return;
-        }
-        if (actionType == ActionType.CHECK) {
-            try {
-                super.checkPrivileges(hiveOpType, inputHObjs, outputHObjs, context);
-            } catch (HiveAccessControlException rangerEx) {
+        DecisionData data = response.data();
+        switch (data.actionType()) {
+            case BLOCK -> throw new HiveAccessControlException(nonEmpty(data.msg(), "任务被拦截：请补充 JobName 或按规范整改。"));
+            case BYPASS -> {
+                return;
+            }
+            case WARN -> {
+                LOG.warn("WARN action for queryId={}, msg={}", request.queryId(), data.msg());
+                return;
+            }
+            case CHECK -> {
                 try {
-                    governanceClient.msgFail(request, rangerEx.getMessage());
-                } catch (Exception callbackEx) {
-                    LOG.error("msgFail callback failed", callbackEx);
+                    super.checkPrivileges(hiveOpType, inputHObjs, outputHObjs, context);
+                } catch (HiveAccessControlException rangerEx) {
+                    try {
+                        governanceClient.msgFail(request, rangerEx.getMessage());
+                    } catch (Exception callbackEx) {
+                        LOG.error("msgFail callback failed", callbackEx);
+                    }
+                    if (strictCheckFailure) {
+                        throw rangerEx;
+                    }
+                    LOG.warn("Observe mode enabled, swallow Ranger denial. queryId={}, err={}", request.queryId(), rangerEx.getMessage());
                 }
-                if (strictCheckFailure) {
-                    throw rangerEx;
-                }
-                LOG.warn("Observe mode enabled, swallow Ranger denial. queryId={}, err={}", request.getQueryId(), rangerEx.getMessage());
-
+            }
+            default -> {
+                return;
             }
         }
     }
@@ -110,8 +117,7 @@ public class PhasedRangerAuthorizer extends RangerHiveAuthorizer {
     }
 
     private String nonEmpty(String message, String fallback) {
-        if (message == null || message.trim().isEmpty()) {
-
+        if (message == null || message.isBlank()) {
             return fallback;
         }
         return message;
