@@ -1,10 +1,10 @@
-package com.ranger.governance.hive;
+package com.youcash.governance.hive;
 
-import com.ranger.governance.common.model.ActionType;
-import com.ranger.governance.common.model.DecisionData;
-import com.ranger.governance.common.model.DecisionRequest;
-import com.ranger.governance.common.model.DecisionResponse;
-import com.ranger.governance.common.protocol.GovernanceClient;
+import com.youcash.governance.common.model.ActionType;
+import com.youcash.governance.common.model.DecisionData;
+import com.youcash.governance.common.model.DecisionRequest;
+import com.youcash.governance.common.model.DecisionResponse;
+import com.youcash.governance.common.protocol.GovernanceClient;
 import org.apache.hadoop.hive.conf.HiveConf;
 import org.apache.hadoop.hive.metastore.HiveMetaStoreClientFactory;
 import org.apache.hadoop.hive.ql.metadata.HiveAuthenticationProvider;
@@ -13,7 +13,9 @@ import org.apache.hadoop.hive.ql.security.authorization.plugin.HiveAuthzPluginEx
 import org.apache.hadoop.hive.ql.security.authorization.plugin.HiveAuthzSessionContext;
 import org.apache.ranger.authorization.hive.authorizer.RangerHiveAuthorizerFactory;
 
-
+/**
+ * Factory to replace RangerHiveAuthorizerFactory with phased governance proxy.
+ */
 public class PhasedRangerAuthorizerFactory extends RangerHiveAuthorizerFactory {
 
     @Override
@@ -23,16 +25,14 @@ public class PhasedRangerAuthorizerFactory extends RangerHiveAuthorizerFactory {
             HiveAuthenticationProvider hiveAuthenticator,
             HiveAuthzSessionContext sessionContext
     ) throws HiveAuthzPluginException {
-        GovernanceClient client = buildGovernanceClient(conf);
-        boolean strict = conf.getBoolean("ranger.governance.strict-check-failure", true);
         try {
             return new PhasedRangerAuthorizer(
                     metastoreClientFactory,
                     conf,
                     hiveAuthenticator,
                     sessionContext,
-                    client,
-                    strict
+                    buildGovernanceClient(conf),
+                    conf.getBoolean("youcash.governance.strict-check-failure", true)
             );
         } catch (Exception e) {
             throw new HiveAuthzPluginException("Failed to create PhasedRangerAuthorizer", e);
@@ -40,24 +40,26 @@ public class PhasedRangerAuthorizerFactory extends RangerHiveAuthorizerFactory {
     }
 
     private GovernanceClient buildGovernanceClient(HiveConf conf) {
-        final String url = conf.get("ranger.governance.endpoint", "http://governance-service/v1/decision");
+        String url = conf.get("youcash.governance.endpoint", "http://governance-service/v1/decision");
         return new GovernanceClient() {
             @Override
             public DecisionResponse decide(DecisionRequest request) {
-                if (request.getJobName() == null || request.getJobName().trim().isEmpty() || "unknown".equals(request.getJobName())) {
+                // TODO: replace with real HTTP/RPC client. This default keeps plugin behavior deterministic.
+                if (request.jobName() == null || request.jobName().isBlank() || "unknown".equals(request.jobName())) {
                     return new DecisionResponse(200, "local-trace", new DecisionData(ActionType.BLOCK,
-                            "任务被拦截，原因：未设置 JobName，请参考 Wiki 整改。", true, request.getQueryId()));
+                            "任务被拦截，原因：未设置 JobName，请参考 Wiki 整改。", true, request.queryId()));
                 }
-                if (request.getJobName().startsWith("auth_on_.") || request.getJobName().startsWith("auth_on_")) {
+                if (request.jobName().startsWith("auth_on_.") || request.jobName().startsWith("auth_on_")) {
                     return new DecisionResponse(200, "local-trace", new DecisionData(ActionType.CHECK,
-                            "进入 Ranger 鉴权", false, request.getQueryId()));
+                            "进入 Ranger 鉴权", false, request.queryId()));
                 }
                 return new DecisionResponse(200, "local-trace", new DecisionData(ActionType.BYPASS,
-                        "存量任务豁免", false, request.getQueryId()));
+                        "存量任务豁免", false, request.queryId()));
             }
 
             @Override
             public void msgFail(DecisionRequest request, String rangerErrorMessage) {
+                // TODO: callback to governance platform /v1/msgFail
                 String ignored = url + rangerErrorMessage;
             }
         };
